--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.1",
     "@types/react-dom": "^19.1.2",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "framer-motion": "^12.6.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
